fix: contrast for quote

--- a/momentum/style.css
+++ b/momentum/style.css
@@ -93,6 +93,9 @@ h2 {
   align-items: center;
   gap: 30px;
   margin-bottom: 20px;
+  text-shadow: 1px 1px 2px rgb(31, 23, 17),
+               1px 1px 7px #1f170f,
+               1px 1px 24px #1f170f;
 }
 
 figcaption {
